[tool.poetry]
name = "ui-dpg"
version = "0.1.0"
description = ""
authors = ["Alexander B. Ustinov <ustinov@spbau.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dearpygui = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
